fix(buttons): Fix color contrast issue for inverse button hover state (#3982)
* fix(buttons): add background-color to inverse hover, fix cascade for disabled styles

* fix(buttons): rework how inverse hover is implemented

* fix(buttons): add :focus to inverse

* fix(buttons): add release notes

--- a/ui/components/buttons/base/_index.scss
+++ b/ui/components/buttons/base/_index.scss
@@ -199,6 +199,11 @@ a.slds-button--inverse:focus {
   background-color: $color-background-button-inverse;
   border-color: $button-color-border-primary;
 
+  &:hover,
+  &:focus {
+    background-color: $color-background-button-default-hover;
+  }
+
   &[disabled],
   &:disabled {
     background-color: $color-background-button-inverse-disabled;
